Correction of typo in Grashof Number

--- a/weeks/week_3.tex
+++ b/weeks/week_3.tex
@@ -35,7 +35,11 @@ The convection coefficient $h$ depends on
         \item Transition can \color{red} be advanced \color{black} if the surface roughness is high;
         \item Transition can \color{red} be delayed \color{black} if there are suction / vortex generators 
     \end{itemize}
-    \item Characteristic Length
+    \item Summary of Characteristic Length for Reynolds and Rayleigh's Number
+    \begin{figure}[H]
+        \centering
+        \includegraphics[width=1.0\linewidth]{images/List_of_Characteristic_Length.png}
+    \end{figure}
 \end{itemize}
 \textbf{\underline{Prandtl Number}}
 \begin{equation*}
