--- a/weeks/week_4.tex
+++ b/weeks/week_4.tex
@@ -6,7 +6,7 @@
     \item \color{blue} Quiescent fluid \color{black} means motionless fluid.
     \item \color{red}Grashof Number\color{black}
     \begin{align*}
-        \text{Gr}_{L} &= \frac{g \beta (T_s- T_{\infty} L^3)}{v^2} \\ 
+        \text{Gr}_{L} &= \frac{g \beta (T_s- T_{\infty}) L_c^3}{v^2} \\ 
         &= \frac{\text{buoyancy force}}{\text{viscous force}} \\
         \text{where } g &= 9.8, \; \text{m/s}^2 \\
         \beta &= \text{coefficient of volume expansion, }\; k^{-1} \\
