Updates from Overleaf

--- a/configuracoes/includes.tex
+++ b/configuracoes/includes.tex
@@ -59,3 +59,5 @@ headsep=0cm,
 
 %Idioma. Use "english" para trabalhos em inglês
 \usepackage[brazil]{babel}
+
+\newcommand{\volume}{{\ooalign{\hfil$V$\hfil\cr\kern0.08em--\hfil\cr}}}
