--- a/main.tex
+++ b/main.tex
@@ -23,13 +23,9 @@
 \input{weeks/week_2.tex}
 \input{weeks/week_3.tex}
 \input{weeks/week_4.tex}
-%\input{weeks/week_5.tex}
-%\input{weeks/week_6.tex}
-%\input{weeks/week_7.tex}
-%\input{weeks/week_8.tex}
-%\input{weeks/week_9.tex}
-%\input{weeks/week_10.tex}
-%\input{weeks/MATLAB_TIPS}
+\input{weeks/week_5.tex}
+\input{weeks/week_7.tex}
+
 
 \printbibliography
 
