Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -25,6 +25,9 @@
 \input{weeks/week_4.tex}
 \input{weeks/week_5.tex}
 \input{weeks/week_7.tex}
+\input{weeks/week_8.tex}
+\input{weeks/week_9.tex}
+\input{weeks/week_10.tex}
 
 
 \printbibliography
