--- a/weeks/week_7.tex
+++ b/weeks/week_7.tex
@@ -139,6 +139,8 @@ The general formula:
     \frac{\chi_0}{\chi} = f(M)\,\text{for a given gas with } \gamma
 \end{equation*}
 
+Stagnation conditions are identical for isentropic processes.
+
 \begin{itemize}
     \item \textbf{Stagnation Temperature} \color{green}(adiabatic flow)\color{black}
     \begin{equation*}
