Updates from Overleaf

--- a/configuracoes/includes.tex
+++ b/configuracoes/includes.tex
@@ -57,6 +57,9 @@ headsep=0cm,
     maxbibnames=10]{biblatex}
 \addbibresource{referencia.bib}
 
+% better underlines
+\usepackage{soul}
+
 %Idioma. Use "english" para trabalhos em inglês
 \usepackage[brazil]{babel}
 
