Updates from Overleaf

--- a/weeks/week_8.tex
+++ b/weeks/week_8.tex
@@ -179,7 +179,7 @@ Def: expansion waves occurred at convex corners. It is a {\color{red}isentropic}
     \includegraphics[width=1.0\linewidth]{images/Pitot_static_tubes.png}
 \end{figure}
 
-\large \textbf{\underline{{\color{red}Pitot-Static Tubes}}}
+\large \textbf{\underline{{\color{red}Lift and Drag}}}
 \begin{figure}[H]
     \centering
     \includegraphics[width=1.0\linewidth]{images/Compressible_Aerodynamics.png}
@@ -187,7 +187,7 @@ Def: expansion waves occurred at convex corners. It is a {\color{red}isentropic}
 
 \begin{align*}
     R &= (p_3 - p_2 ) \cdot c \\
-    L &= (p_3 - p_2 ) \cdot c \cdot \cos(\alpha)
+    L &= (p_3 - p_2 ) \cdot c \cdot \cos(\alpha) \\
     D &= (p_3 - p_2 ) \cdot c \cdot \sin(\alpha)
 \end{align*}
 
