Updates from Overleaf

--- a/weeks/week_10.tex
+++ b/weeks/week_10.tex
@@ -169,7 +169,7 @@ Thermodynamic quantities are referenced to a standard state, usually at 298 K an
 \end{itemize}
 
 \begin{itemize}
-    \item {\color{blue}\textbf{\ul{Species/total Enthalpy}}}
+    \item {\color{blue}\textbf{\ul{Species/total Entropy}}}
     \begin{itemize}
         \item Definition
         \begin{align*}
@@ -197,11 +197,11 @@ Thermodynamic quantities are referenced to a standard state, usually at 298 K an
 \begin{itemize}
     \item Gas behaves like ideal gases;
     \item 1D model;
-    \item Complete combustion;
+    \item Complete combustion (i.e., no C, CO, or $\text{NO}_x$ is formed);
     \item Combustion happens instantaneously at constant pressure;
     \item Fuel is introduced instantaneously with the specified conditions;
     \item The process is adiabatic (approximated using the adiabatic flame temperature);
-    \item Assume no dissociation. If temperature is sufficiently high such that dissociation is significant, \textbf{or} when combustion is rich, use {color{red}\ul{second law analysis}}. If dissociation occurs, products are not just $CO_2$ and $H_2 O$;
+    \item Assume no dissociation. If temperature is sufficiently high such that dissociation is significant, \textbf{or} when combustion is rich, use {\color{red}\ul{second law analysis}}. If dissociation occurs, products are not just $CO_2$ and $H_2 O$;
     \item Either constant pressure (useful for most problems) or constant volume (rare) is assumed.
 \end{itemize}
 
