--- a/weeks/week_8.tex
+++ b/weeks/week_8.tex
@@ -1,4 +1,10 @@
 \section{Week 8}
+General Observations:
+\begin{itemize}
+    \item The Mach number and speed of the flow decrease across a shock wave;
+    \item Because the flow across shock waves is non-isentropic, the total pressure downstream of the shock is always less than the total pressure upstream of the shock; there is a loss of total pressure associated with a shock wave.
+    \item Through an expansion fan, the Mach number increases, the static pressure decreases and the total pressure remains constant.
+\end{itemize}
 \Large \textbf{{\color{red}\underline{Normal Shocks}}}
 
 \begin{itemize}
@@ -78,6 +84,7 @@ Freebody Diagram:
         M_1 = \frac{M_{1n}}{\sin(\beta)}
     \end{equation*}
     Since for a shock to form, it is required that $M_{1n}>1$. Thus, {\color{blue}$M_1 > 1$}. 
+    \item $\theta$ is the \textbf{deflection/turning angle}, and $\beta$ is the \textbf{shock/wave angle}.
     
     \item {\color{red}Downstream of the shock:}
     \begin{figure}[H]
@@ -140,6 +147,7 @@ Def: expansion waves occurred at convex corners. It is a {\color{red}isentropic}
         v(M) &= \sqrt{\frac{\gamma+1}{\gamma-1}}\tan^{-1}\left(\sqrt{\frac{\gamma-1}{\gamma+1}(M^2-1)}\right) \\
         &- \tan^{-1}\left(\sqrt{M^2-1}\right)
     \end{align*}
+    $v(M)$ is also known as the \textbf{P-M angle}.
     \item Upstream-Downstream relation:
     \begin{equation*}
         \theta = v(M_2) - v(M_1)
@@ -148,8 +156,9 @@ Def: expansion waves occurred at convex corners. It is a {\color{red}isentropic}
         \centering
         \includegraphics[width=1.0\linewidth]{images/expansion_wave_up_downstream.png}
     \end{figure}
+    In exams, use the 'Isentropic Flow Relations' in this \href{http://www.dept.aoe.vt.edu/~devenpor/aoe3114/calc.html}{\color{blue}\underline{Online Calculator}\color{black}} to check P-M angle and $M_2$.
     \begin{itemize}
-        \item Mach angles $\alpha_1$ and $\alpha_2$ (also written as $\mu_1$ and $\mu_2$)
+        \item \textbf{Mach angles} $\alpha_1$ and $\alpha_2$ (also written as $\mu_1$ and $\mu_2$)
         \begin{align*}
             \alpha_1 = \mu_1 &= \sin^{-1}\left(\frac{1}{M_1}\right) \\
             \alpha_2 = \mu_2 &= \sin^{-1}\left(\frac{1}{M_2}\right)
