--- a/weeks/week_9.tex
+++ b/weeks/week_9.tex
@@ -14,7 +14,7 @@
             \item no attractive forces
             \item perfectly elastic collisions
         \end{itemize}
-        Hold for {\color{green}low pressure high temperature gases} but not for {\color{red}gases in engine/power reactors}.
+        Hold for {\color{green}low pressure high temperature gases} but not for {\color{red}gases in engine/power reactors}. Gases behave ideally when $T_R > 2$ regardless of pressure except when $P_R >> 1$.
         \item 'Compressed' ideal gas:
         \begin{align*}
             Pv &= {\color{blue}Z}RT\\
@@ -197,6 +197,10 @@
         \begin{equation*}
             s_2 - s_1 = c_{p,av} \ln \left(\frac{T_2}{T_1}\right) - R \ln \left(\frac{P_2}{P_1}\right)
         \end{equation*}
+        \item Using Table A-20:
+        \begin{equation*}
+            \tilde{s_2} - \tilde{s_1} = \overline{s_2}^o - \overline{s_1}^o - R \ln \left(\frac{P_2}{P_1}\right)
+        \end{equation*}
         \item General form:
         \begin{align*}
             s_2 - s_1 &= \int_{T_1}^{T_2} \frac{c_p}{T} dT - \int_{P_1}^{P_2} \left(\frac{\partial v}{\partial T}\right)_P dP
@@ -208,14 +212,4 @@
     \end{itemize}
 \end{itemize}
 
-$Z_h$ Chart 
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=1.0\linewidth]{images/Z_h_table.png}
-\end{figure}
-
-$Z_s$ Chart
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=1.0\linewidth]{images/Z_s_table.png}
-\end{figure}
+$Z_s$ and $Z_h$ can be found using charts.
